--- a/proposal.tex
+++ b/proposal.tex
@@ -4,23 +4,31 @@
 % in the dissertation (see diss.tex).
 
 \documentclass[12pt,a4,parskip=full]{scrartcl}
+\usepackage{pdfpages}
+\usepackage[british]{babel}
+\usepackage[nodayofweek]{datetime}
 \begin{document}
+
+\includepdf[pages={-}]{cover-sheet.pdf}
+\cleardoublepage
 
 \subtitle{Part II Computer Science Project Proposal}
 \title{GPU Acceleration of the Ypnos Programming Language}
 \author{
 S. Pattuzzi, Robinson College\\
-Originator: D. Orchard
+Originator: D. A. Orchard
 }
 
 \maketitle
+
+\vfill
 
 \noindent
 \textbf{Project Supervisor:} D. A. Orchard
 \vspace{0.2in}
 
 \noindent
-\textbf{Director of Studies:} Dr A. Beresford
+\textbf{Director of Studies:} Dr A. R. Beresford
 \vspace{0.2in}
 \noindent
  
